# kademlia

./: .gitignore  .travis.yml  CMakeLists.txt  Distance_tests.m  LICENSE  Makefile  README.md
Kademlia/: Distance.cpp  Distance.hpp  Ip.cpp  Ip.hpp  Kbucket.cpp  Kbucket.hpp  Key.cpp  Key.hpp  Makefile  Messenger.cpp  Messenger.hpp  Node.cpp  Node.hpp  Performer.cpp  Performer.hpp  main.cpp  settings.h
Kademlia.xcodeproj/: project.pbxproj
Kademlia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Kademlia.xcodeproj/project.xcworkspace/xcuserdata/davide.xcuserdatad/: UserInterfaceState.xcuserstate
Kademlia.xcodeproj/xcuserdata/davide.xcuserdatad/xcschemes/: Kademlia.xcscheme  UnitTestsXCT.xcscheme  xcschememanagement.plist
UnitTestsXCT/: Distance_tests.mm  Ip_tests.mm  KBucket_tests.mm  Key_tests.mm  Messenger_tests.mm  Node_tests.mm  Performer_tests.mm  SearchNode.mm  SearchNode_tests.mm  XCTtoCPPuTest.l  XCTtoGTEST.l
src/: Distance.cpp  Distance.hpp  Ip.cpp  Ip.hpp  Kbucket.cpp  Kbucket.hpp  Key.cpp  Key.hpp  Logger.cpp  Logger.hpp  Messenger.cpp  Messenger.hpp  NeighbourManager.cpp  NeighbourManager.hpp  Node.cpp  Node.hpp  Performer.cpp  Performer.hpp  SearchNode.cpp  SearchNode.hpp  Spinlock.hpp  Updater.cpp  Updater.hpp  main.cpp  settings.h
tests/: Distance_tests.cpp  Ip_tests.cpp  KBucket_tests.cpp  Kbucket_tests.cpp  Key_tests.cpp  Messenger_tests.cpp  Node_tests.cpp  Performer_tests.cpp  SearchNode_tests.cpp
