cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(kademlia C CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB kademlia_sources src/*.cpp)
file(GLOB kademlia_headers src/*.hpp settings.h)
include_directories(src)
find_package(Threads REQUIRED)
add_executable(kad ${kademlia_sources})

find_package(gtest)
if(GTEST_FOUND)
    find_package(flex)
    if(FLEX_FOUND)
        include_directories(UnitTestsXCT)
        include_directories(tests)
        file(GLOB gtest_main tests/allTests.cxx)
        FLEX_TARGET(lexer_out UnitTestsXCT/XCTtoGTEST.l ${CMAKE_CURRENT_BINARY_DIR}/testconverter.c)
        set(lexer_output ${CMAKE_CURRENT_BINARY_DIR}/testconverter.c)
        set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/testconverter.c GENERATED)
        add_executable(testconverter EXCLUDE_FROM_ALL ${lexer_output})
        set_target_properties(testconverter PROPERTIES LINK_FLAGS "-ll -lm")
        #        add_custom_command(tests COMMAND ${testconverter} UnitTestsXCT/Distance_tests.mm > ${CMAKE_BINARY_DIR}/Distance_tests.cpp VERBATIM "Converting XCTests to GTests")
        #file(GLOB tests_xct UnitTestsXCT/*.mm)
    endif(FLEX_FOUND)
endif(GTEST_FOUND)
